OVN v22.03.6 - xx xxx xxxx
--------------------------

OVN v22.03.5 - 01 Dec 2023
--------------------------
  - Bug fixes

OVN v22.03.4 - 15 Sep 2023
--------------------------
  - Bug fixes

OVN v22.03.3 - 29 Aug 2023
--------------------------
  - Bug fixes
  - Always allow IPv6 Router Discovery, Neighbor Discovery, and Multicast
    Listener Discovery protocols, regardless of ACLs defined.
  - Add CoPP for the svc_monitor_mac. This addresses CVE-2023-3153.

OVN v22.03.2 - 20 Dec 2022
--------------------------
  - Bug fixes
  - Support (LSP.options:qos_min_rate) to guarantee minimal bandwidth available
    for a logical port.
  - Bump python version required for building OVN to 3.6.
  - Added support for setting the Next server IP in the DHCP header
    using the private DHCP option - 253 in native OVN DHCPv4 responder.

OVN v22.03.1 - 03 Jun 2022
--------------------------
   - Bug fixes
  - Replaced the usage of masked ct_label by ct_mark in most cases to work
    better with hardware-offloading.

OVN v22.03.0 - 11 Mar 2022
--------------------------
  - Refactor CoPP commands introducing a unique name index in CoPP NB table.
    Add following new CoPP commands to manage CoPP table:
    - ovn-nbctl copp-add <name> <proto> <meter>
    - ovn-nbctl copp-del <name> <proto>
    - ovn-nbctl copp-list <name>
    - ovn-nbctl ls-copp-add <name> <switch>
    - ovn-nbctl lr-copp-add <name> <router>
  - Support version pinning between ovn-northd and ovn-controller-vtep as an
    option. If the option is enabled and the versions don't match,
    ovn-controller-vtep will not process any DB changes.
  - When configured to log packtes matching ACLs, log the direction (logical
    pipeline) too.
  - Introduce exclude-lb-vips-from-garp in logical_switch_port column in order
    to not advertise lbs VIPs in GARPs sent by the logical router.
  - ACLs now have an "options" column for configuration of extra options.